# headless-cms

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yaml  rust-toolchain.toml
.cargo/: config.toml
application/: Cargo.toml
application/src/: lib.rs
application/src/tests/usecase/: category.rs  content_model.rs  mod.rs
application/src/usecase/: category.rs  content.rs  content_model.rs  mod.rs
domain/: Cargo.toml
domain/src/: content.rs  content_model.rs  field.rs  lib.rs
domain/src/model/: category.rs  content.rs  content_model.rs  field.rs  field_meta.rs  mod.rs  role.rs  tag.rs  user.rs
domain/src/repository/: category.rs  content.rs  content_model.rs  mod.rs  tag.rs  user.rs
domain/src/tests/model/: category.rs  content.rs  content_model.rs  user.rs
infrastructure/: Cargo.toml
infrastructure/migrations/: 20241207023132_start.down.sql  20241207023132_start.up.sql
infrastructure/src/: lib.rs
infrastructure/src/database/: category_repository.rs  config.rs  connection.rs  contents_repository.rs  health_repository.rs  mod.rs  tag_repository.rs  user_repository.rs
infrastructure/src/database/repository/: category.rs  content_model.rs  contents.rs  health.rs  mod.rs
infrastructure/src/storage/: client.rs  media.rs  mod.rs
infrastructure/src/storage/repository/: media.rs
infrastructure/src/tests/database/: category_repository.rs  content_repository.rs  mod.rs  tag_repository.rs
infrastructure/src/tests/database/repository/: category.rs  content.rs  content_model.rs
infrastructure/src/tests/fixtures/: category.sql  content.sql  content_model.sql  content_tags.sql  tags.sql  users.sql
infrastructure/src/tests/repository/: content.rs  content_model.rs
infrastructure/src/tests/storage/: media.rs
infrastructure/src/tests/storage/repository/: media.rs
infrastructure/src/web_api/: health_check.rs
interface/: Cargo.toml
interface/src/: lib.rs
interface/src/handler/: auth.rs  category.rs  content.rs  content_model.rs  error.rs  health.rs  media.rs  mod.rs  role.rs  tag.rs  user.rs
interface/src/route/: category.rs  content.rs  content_model.rs  health.rs  mod.rs  swagger.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  logger.rs
