[package]
name = "headless-cms"
version = "0.1.0"
edition = "2021"
authors = ["ofuji.works@gmail.com"]

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = [
  "application",
  "domain",
  "infrastructure",
  "interface",
  "registry",
  "shared",
]

[workspace.dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
rstest = "0.23.0"
tokio = { version = "1.41.1", features = ["full"] }
derive-new = "0.7.0"
serde = "1.0.215"
serde_json = { version = "1.0", features = ["raw_value"] }
domain = { path = "./domain" }
infrastructure = { path = "./infrastructure" }
interface = { path = "./interface" }
shared = { path = "./shared" }
registry = { path = "./registry" }

[dependencies]
anyhow.workspace = true
tokio.workspace = true
infrastructure.workspace = true
interface.workspace = true
shared.workspace = true
registry.workspace = true

