[package]
name = "headless-cms"
version = "0.1.0"
edition = "2021"
authors = ["ofuji.works@gmail.com"]

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = [
  "application",
  "domain",
  "infrastructure",
  "interface",
  "registry",
  "shared",
]

[workspace.dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
aws-sdk-s3 = "1.74.0"
garde = "0.20.0"
rstest = "0.23.0"
tokio = { version = "1.41.1", features = ["full"] }
derive-new = "0.7.0"
mockall = "0.13.1"
serde = "1.0.215"
serde_json = { version = "1.0", features = ["raw_value"] }
tracing-subscriber = "0.3.19"
thiserror = "2.0.7"
utoipa = { version = "5.3.0", features = ["axum_extras"] }
url = "2.5.4"
uuid = { version = "1.15.1", features = ["v7"] }
application = { path = "./application" }
domain = { path = "./domain" }
infrastructure = { path = "./infrastructure" }
interface = { path = "./interface" }
shared = { path = "./shared" }
registry = { path = "./registry" }

[dependencies]
anyhow.workspace = true
tokio.workspace = true
infrastructure.workspace = true
interface.workspace = true
shared.workspace = true
registry.workspace = true

