[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true 
chrono.workspace = true
derive-new.workspace = true
mockall.workspace = true
rstest.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
url.workspace = true
