[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-sdk-s3.workspace = true
derive-new.workspace = true
rstest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
sqlx = { version = "0.8.2", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
serde_json.workspace = true
domain.workspace = true
shared.workspace = true
uuid.workspace = true
