[package]
name = "interface"
version = "0.1.0"
edition = "2021"

[dependencies]
application.workspace = true
domain.workspace = true
garde.workspace = true
registry.workspace = true
axum = "0.7.9"
anyhow.workspace = true
derive-new.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa.workspace = true
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }

